<resources>
    <string name="app_name">Doktermu</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="save">Simpan</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="minus">-</string>
    <string name="facebook_app_id">1568480343444186</string>
    <string name="onboarding_skip">LEWATI</string>
    <string name="onboarding_previous">SEBELUMNYA</string>
    <string name="onboarding_next">BERIKUTNYA</string>
    <string name="onboarding_jump_in">MASUK</string>
    <string name="onboarding_share">SHARE WITH YOUR FRIENDS</string>
    <string name="sign_in_fb">Facebook</string>
    <string name="sign_in_gplus">Google</string>
    <string name="sign_in_email">Masuk</string>
    <string name="sign_in">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="password_bima_hint">Kata sandi Doktermu</string>
    <string name="whats_my_password">Lupa kata sandi Anda?</string>
    <string name="full_name">Nama lengkap</string>
    <string name="full_name_hint">Nama lengkap anda</string>
    <string name="referral_message">Apabila anda tidak mendapat referensi, mohon mengosongkan kolom dibawah.
        Namun apabila anda direferensikan oleh agen atau mitra kerja BIMA, mohon isi nomor referensi pada kolom yang tertera.</string>
    <string name="agent_number">Nomor Referensi</string>
    <string name="validate">Kirim</string>
    <string name="or">Atau</string>
    <string name="home">Beranda</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="home_info">Sekarang anda dapat menikmati layanan dari BIMA dari ponsel anda.</string>
    <string name="home_lets_get_started">Mari kita mulai!</string>
    <string name="doctor_on_call">Doktermu</string>
    <string name="doctor_on_call_info">Dokter kami akan menjawab
        pertanyaan dan keluhan Anda seputar kesehatan.\n\n
        Jam Operasional\n
        06.00 – 22.00 WIB</string>
    <string name="doctor_on_call_subscription_info">
        Segera aktivasi layanan kami untuk memulai konsultasi dengan dokter!</string>
    <string name="doctor_on_call_book_a_call">Mulai konsultasi</string>
    <string name="doctor_on_call_subscribe">Aktivasi</string>
    <string name="book_call_choose_topic">Pilih topik dan subtopik</string>
    <string name="book_call_add_some_notes">Tambahkan catatan</string>
    <string name="book_call_add_some_pictures">Tambahkan gambar</string>
    <string name="book_call_optional">(Pilihan)</string>
    <string name="book_call_book_the_call">Buat janji konsultasi sekarang</string>
    <string name="book_call_next">Berikutnya</string>
    <string name="book_call_prev">Sebelumnya</string>
    <string name="book_call_pick_image_intent_text">Pilih Gambar</string>
    <string name="book_call_error_picture_upload">Gambar tidak bisa diunggah: </string>
    <string name="book_call_success_picture_upload">Gambar berhasil diunggah: </string>
    <string name="book_call_max_chars">Maksimum 280 Karakter</string>
    <string name="book_call_number_notice">Kami akan menghubungi Anda pada:</string>
    <string name="book_call_finialze_booking">Finalisasi janji konsultasi</string>
    <string name="book_call_pending_customer">Halo %s!</string>
    <string name="book_call_pending_message">Pemesanan anda sedang diproses.\nKami akan menetapkan dokter untuk anda segera.</string>
    <string name="book_call_pending_cancel_call">Batalkan Konsultasi</string>
    <string name="book_call_add_image_duplicate">Gambar duplikasi. Tidak dapat ditambahkan.</string>
    <string name="book_call_assigned_doctor">Dokter kami</string>
    <string name="book_call_assigned_message">sudah ditetapkan.\n\nAnda akan ditelpon dalam waktu:</string>
    <string name="book_call_assigned_time">beberapa menit</string>
    <string name="book_call_assigned_cancel_call">Batalkan Konsultasi</string>
    <string name="book_call_complete_message">Selamat!\n\nAnda telah berhasil melakukan pemesanan dan konsultasi.</string>
    <string name="book_call_tell_us_more">Topik konsultasi</string>
    <string name="book_call_info_1">
        Jika lebih dari 1 jam anda tidak dihubungi oleh team kami, silahkan mengirim email ke:
    </string>
    <string name="book_call_email">doktermu@bimaindonesia.co.id</string>
    <string name="book_call_info_2">
        Tulis nama lengkap dan nomer telepon anda yang aktif.
    </string>
    <string name="book_call_about">Apa topik anda?</string>
    <string name="book_call_phone">Nomor telepon Anda:</string>
    <string name="book_call_phone_info_modal">\?</string>
    <string name="book_my_call">Buat janji</string>
    <string name="book_call_rules">
        Jam buka 06.00 - 22.00 WIB\n
        Anda akan dihubungi dalam 1 jam ke depan (maksimal)</string>
    <string name="book_call_pending">Konsultasi Anda masih dalam proses</string>
    <string name="book_call_details_not_found">Info tentang konsultasi ini tidak tersedia.</string>
    <string name="book_call_cancelled">Berhasil!</string>
    <string name="book_call_cancelled_message">Konsultasi Anda telah dibatalkan.</string>
    <string name="dialog_cancel_call_modal_title">Apakah anda yakin?</string>
    <string name="dialog_cancel_call_modal_text">Jika anda batalkan sekarang maka anda harus menunggu untuk membuat janji berikutnya!</string>
    <string name="partners_inactive_info">Segera aktivasi dan dapatkan potongan harga dari
        mitra kami di sekitar Anda!</string>
    <string name="partners_active_info">Temukan dan dapatkan potongan harga dari
        mitra kami di sekitar Anda!</string>
    <string name="partners_none_found">Belum ada mitra kami untuk kategori ini.</string>
    <string name="partners_subscribe">Aktivasi</string>
    <string name="partners_find">Cari Mitra</string>
    <string name="partners_gps_disabled_title">GPS non-aktif</string>
    <string name="partners_gps_disabled">Silahkan aktifkan layanan lokasi pada perangkat anda untuk memaksimalkan layanan ini.</string>
    <string name="partners_gps_aktifkan">Aktifkan</string>
    <string name="about_bima">Tentang BIMA</string>
    <string name="about_bima_info">Kami menyediakan layanan kesehatan dan asuransi berbasis teknologi informasi</string>
    <string name="about_bima_learn_more">Informasi lebih lanjut</string>
    <string name="about_bima_website">www.bimaindonesia.co.id</string>
    <string name="about_bima_give_us_call">Layanan konsumen</string>
    <string name="about_bima_phone_number">0274&#8211;2112462</string>
    <string name="profile">Profil</string>
    <string name="my_profile">Profil saya</string>
    <string name="profile_personal_info">Info personal</string>
    <string name="profile_email_address">Email</string>
    <string name="profile_password">Kata sandi</string>
    <string name="profile_asterisk_password">********</string>
    <string name="my_phone_number">Nomor telepon</string>
    <string name="profile_my_personal_info">Info personal saya</string>
    <string name="profile_general_information">Informasi umum</string>
    <string name="profile_current_health">Kondisi kesehatan saat ini</string>
    <string name="profile_medicine_information">Informasi obat</string>
    <string name="profile_call_history_info">Konsultasi terakhir</string>
    <string name="profile_call_history_more">Selebihnya</string>
    <string name="profile_app_info">
        BIMA Mobile v%s\n
        Hak Cipta &#169;BIMA - 2016\n\n
        A concept designed and developed by Cerise
    </string>
    <string name="cerise">Cerise</string>
    <string name="call_history_details">Rincian riwayat panggilan</string>
    <string name="call_history_prescription">Resep</string>
    <string name="call_history_immunisation">Imunisasi</string>
    <string name="call_history_my_notes">Catatan</string>
    <string name="call_history_my_pictures">Gambar</string>
    <string name="call_history_details_summary">Ringkasan panggilan</string>
    <string name="doctor_profile">Profil dokter</string>
    <string name="doctor_information">Informasi dokter</string>
    <string name="doctor_certification_code">Nomor Sertifikat:</string>
    <string name="doctor_speciality">Spesialis:</string>
    <string name="doctor_university">Universitas:</string>
    <string name="doctor_bio">Biografi dokter</string>
    <string name="general_height">Tinggi</string>
    <string name="general_weight">Berat</string>
    <string name="general_religion">Agama</string>
    <string name="general_blood_type">Golongan darah</string>
    <string name="general_smoker">Perokok</string>
    <string name="general_physical_exercise">Olahraga</string>
    <string name="general_health_insurance">Asuransi kesehatan</string>
    <string name="current_health_diabetes">Diabetes:</string>
    <string name="current_health_cancer">Kanker:</string>
    <string name="current_health_blood_pressure">Tekanan darah:</string>
    <string name="current_health_allergies">Alergi:</string>
    <string name="current_health_asthma">Asma:</string>
    <string name="current_health_pregnant">Kehamilan:</string>
    <string name="current_health_add_info">Tambahkan informasi</string>
    <string name="current_health_add_new">Jika ada</string>
    <string name="current_health_invalid_diabetes">Silahkan pilih jawaban untuk diabetes.</string>
    <string name="current_health_invalid_blood_pressure">Silahkan pilih jawaban untuk tekanan darah.</string>
    <string name="current_health_invalid_asthma">Silahkan pilih jawaban untuk asma.</string>
    <string name="current_health_invalid_pregnant">Silahkan pilih jawaban untuk kehamilan.</string>
    <string name="current_health_already_selected">Sudah dipilih, silahkan pilih yang lainnya.</string>
    <string name="current_health_invalid_other">Mohon isi informasi yang valid.</string>
    <string name="medicine_prescription">Resep</string>
    <string name="medicine_immunisation">Imunisasi</string>
    <string name="medicine_date">Tanggal</string>
    <string name="medicine_name">Nama</string>
    <string name="medicine_duration">Durasi</string>
    <string name="medicine_renewal">Pembaruan</string>
    <string name="drawer_doctor_on_call">Doktermu</string>
    <string name="drawer_about_bima">Tentang BIMA</string>
    <string name="drawer_coming_soon">Fitur yang akan datang</string>
    <string name="drawer_news">Artikel</string>
    <string name="drawer_partners">Mitra</string>
    <string name="drawer_subscribe">Aktivasi</string>
    <string name="drawer_settings">Pengaturan</string>
    <string name="subscription">Aktivasi</string>
    <string name="subscription_name">Nama</string>
    <string name="subscription_phone_number">Nomor telepon</string>
    <string name="subscription_email">Email</string>
    <string name="subscription_ktp_number">Nomor KTP</string>
    <string name="subscription_gender">Jenis kelamin</string>
    <string name="subscription_dob">Tanggal lahir</string>
    <string name="subscription_province">Provinsi</string>
    <string name="subscription_agent_number">Nomor agent</string>
    <string name="subscription_agent_number_optional">Nomor agent (pilihan)</string>
    <string name="subscription_subscribe">Aktifkan</string>
    <string name="your_subscription">Info akun</string>
    <string name="monthly_plan">Status aktivasi:</string>
    <string name="next_billing_date">Akhir masa aktif:</string>
    <string name="member_number">Nomor anggota:</string>
    <string name="subscription_enabled">Aktif</string>
    <string name="dialog_change_phone_number">Ubah nomor telepon</string>
    <string name="dialog_new_phone_number">Nomor telepon baru</string>
    <string name="dialog_validate">Validasi</string>
    <string name="dialog_cancel">Batalkan</string>
    <string name="dialog_forgot_password_info">Kami akan mengirimkan kata sandi yang baru ke alamat email Anda</string>
</resources>