<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="login_viewmodel"
            type="com.bima.dokterpribadimu.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/generic_xlarge_padding"
        android:background="@drawable/landing_bg">

        <ImageView
            android:id="@+id/login_bima_icon"
            android:layout_width="@dimen/landing_bima_icon_width"
            android:layout_height="@dimen/landing_bima_icon_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bima_logo_icon"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:layout_width="@dimen/landing_bima_text_width"
            android:layout_height="@dimen/landing_bima_text_height"
            android:layout_below="@+id/login_bima_icon"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bima_logo_text"
            android:contentDescription="@string/app_name"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_button_height"
            android:layout_marginBottom="@dimen/generic_large_margin"
            android:layout_above="@+id/login_gplus_button"
            android:text="@string/sign_in_fb"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/rounded_fb_blue_bg_selector"/>

        <Button
            android:id="@+id/login_gplus_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_button_height"
            android:layout_marginBottom="@dimen/generic_xlarge_margin"
            android:layout_above="@+id/login_email_info"
            android:text="@string/sign_in_gplus"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/rounded_gplus_red_bg_selector"/>

        <TextView
            android:id="@+id/login_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/generic_normal_margin"
            android:text="@string/sign_in_email"
            android:textSize="18sp"
            android:layout_above="@+id/login_register_layout"
            android:textColor="@color/bima_blue"/>

        <LinearLayout
            android:id="@+id/login_register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/generic_normal_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/login_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="@{login_viewmodel.signInClickListener}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/bima_blue"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/generic_separator_height"
                    android:background="@color/bima_blue"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/generic_xlarge_margin"
                android:layout_marginStart="@dimen/generic_xlarge_margin"
                android:orientation="vertical"
                android:onClick="@{login_viewmodel.registerClickListener}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/bima_blue"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/generic_separator_height"
                    android:background="@color/bima_blue"/>

            </LinearLayout>
            
        </LinearLayout>

    </RelativeLayout>

</layout>