<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/generic_xlarge_padding"
        android:background="@drawable/landing_bg">

        <ImageView
            android:id="@+id/login_bima_icon"
            android:layout_width="@dimen/landing_bima_icon_width"
            android:layout_height="@dimen/landing_bima_icon_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bima_logo_icon"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:layout_width="@dimen/landing_bima_text_width"
            android:layout_height="@dimen/landing_bima_text_height"
            android:layout_below="@+id/login_bima_icon"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bima_logo_text"
            android:contentDescription="@string/app_name"/>

        <Button
            android:id="@+id/login_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_button_height"
            android:layout_marginBottom="@dimen/generic_large_margin"
            android:layout_above="@+id/login_register_button"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/rounded_bima_blue_bg_selector"/>

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generic_button_height"
            android:layout_marginBottom="@dimen/generic_large_margin"
            android:layout_alignParentBottom="true"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/bima_blue"
            android:textSize="16sp"
            android:background="@drawable/rounded_bima_blue_o_bg_selector"/>

    </RelativeLayout>

</layout>