<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/dialog_min_width"
        android:paddingLeft="@dimen/generic_large_padding"
        android:paddingStart="@dimen/generic_large_padding"
        android:paddingRight="@dimen/generic_large_padding"
        android:paddingEnd="@dimen/generic_large_padding"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/dialog_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/generic_large_padding"
            android:paddingStart="@dimen/generic_large_padding"
            android:paddingRight="@dimen/generic_large_padding"
            android:paddingEnd="@dimen/generic_large_padding"
            android:layout_marginTop="@dimen/generic_large_margin"
            android:gravity="center"
            android:text="@string/whats_my_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/generic_title_text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/generic_large_padding"
            android:paddingStart="@dimen/generic_large_padding"
            android:paddingRight="@dimen/generic_large_padding"
            android:paddingEnd="@dimen/generic_large_padding"
            android:layout_marginTop="@dimen/generic_large_margin"
            android:minLines="4"
            android:text="@string/dialog_forgot_password_info"
            android:textColor="@android:color/black"
            android:textSize="@dimen/generic_subheading_text_size"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_large_margin"
            android:paddingLeft="@dimen/generic_large_padding"
            android:paddingStart="@dimen/generic_large_padding"
            android:paddingRight="@dimen/generic_large_padding"
            android:paddingEnd="@dimen/generic_large_padding">

            <EditText
                android:id="@+id/forgot_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="@dimen/generic_subheading_text_size"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/generic_large_padding"
            android:paddingStart="@dimen/generic_large_padding"
            android:paddingRight="@dimen/generic_large_padding"
            android:paddingEnd="@dimen/generic_large_padding"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <Button
                android:id="@+id/forgot_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_large_margin"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/dialog_cancel"
                android:textColor="@color/grey_a1"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/forgot_validate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_large_margin"
                android:layout_marginLeft="@dimen/generic_large_margin"
                android:layout_marginStart="@dimen/generic_large_margin"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/dialog_validate"
                android:textColor="@color/bima_blue"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</layout>