<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/dialog_min_width"
        android:paddingLeft="@dimen/generic_large_padding"
        android:paddingStart="@dimen/generic_large_padding"
        android:paddingRight="@dimen/generic_large_padding"
        android:paddingEnd="@dimen/generic_large_padding"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/generic_large_padding"
            android:paddingStart="@dimen/generic_large_padding"
            android:paddingRight="@dimen/generic_large_padding"
            android:paddingEnd="@dimen/generic_large_padding"
            android:layout_marginTop="@dimen/generic_large_margin"
            android:gravity="center"
            android:text="@string/dialog_change_phone_number"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/change_phone_number_dialog_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_large_margin">

            <EditText
                android:id="@+id/change_phone_number_dialog_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/generic_normal_margin"
                android:hint="@string/dialog_new_phone_number"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/change_phone_number_validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/generic_large_margin"
            android:background="?android:attr/selectableItemBackground"
            android:layout_gravity="end"
            android:text="@string/dialog_validate"
            android:textColor="@color/bima_blue"
            android:textSize="16sp"/>

    </LinearLayout>

</layout>